--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "KMK Beehives",
   "short_name": "KMK Beehives",
-  "description": "Meal Booking Platform",
+  "description": "Quality Beehives",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
