--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,13 @@
   "theme_color": "#017023",
  "icons": [
   {
-    "src": "/images/newlogo192.png",
+    "src": "/images/logo1.svg",
     "sizes": "192x192",
     "type": "image/png",
     "purpose": "any maskable"
   },
   {
-    "src": "/images/newlogo512.png",
+    "src": "/images/logo1.svg",
     "sizes": "512x512",
     "type": "image/png",
     "purpose": "any maskable"
